<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.shareride.View.RegistrationFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:id="@+id/usernameEditText"
        android:layout_gravity="center_horizontal"
        android:hint="@string/placeholder_username"
        android:layout_marginTop="@dimen/welcome_content_margin" />

    <EditText
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/fullnameEditText"
        android:layout_gravity="center_horizontal"
        android:inputType="textPersonName"
        android:hint="@string/placeholder_fullname"
        android:layout_marginTop="@dimen/activity_vertical_margin_half" />

    <EditText
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:id="@+id/idEditText"
        android:layout_gravity="center_horizontal"
        android:hint="@string/placeholder_id"
        android:layout_marginTop="@dimen/activity_vertical_margin_half"
        android:inputType="number" />

    <EditText
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/contactEditText"
        android:layout_gravity="center_horizontal"
        android:hint="@string/placeholder_contact"
        android:inputType="phone"
        android:layout_marginTop="@dimen/activity_vertical_margin_half" />

    <EditText
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordEditText"
        android:layout_gravity="center_horizontal"
        android:hint="@string/placeholder_password"
        android:layout_marginTop="@dimen/activity_vertical_margin_half" />

    <EditText
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/confirmPasswordEditText"
        android:layout_gravity="center_horizontal"
        android:hint="@string/placeholder_confirm_password"
        android:layout_marginTop="@dimen/activity_vertical_margin_half" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:id="@+id/registerButton"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/button_text"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

</LinearLayout>
