<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.shareride.View.LoginFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login_welcome"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/welcome_content_margin"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:id="@+id/loginUsernameEditText"
        android:layout_gravity="center_horizontal"
        android:hint="@string/placeholder_username"
        android:layout_marginTop="50dp" />

    <EditText
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/loginPasswordEditText"
        android:layout_gravity="center_horizontal"
        android:hint="@string/placeholder_password"
        android:layout_marginTop="@dimen/activity_vertical_margin_half" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/loginButton"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/button_text"
        android:layout_marginTop="50dp" />
</LinearLayout>
