<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.shareride.View.HomeActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/homeToolbar"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:elevation="4dp"
        android:background="@color/colorPrimaryDark"
        app:titleTextColor="@color/colorWhite"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login_welcome"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/fullnameTextView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textColor="@color/colorPrimary" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/post"
        android:id="@+id/postRideButton"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/button_text"
        android:background="@color/colorPrimaryDark" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/button_text"
        android:background="@color/colorPrimaryDark" />
</LinearLayout>
